@@ -2116,3 +2116,6 @@ Version		Change Log
 		and setToMedianOf
 	job-size and max-jobs-per-slave parameters in MasterProblem have been
 		both set to 1 by default.
+	Further modifications to get Threadpool serialization working.
+		PoolThread is now no longer an inner class, and the LinkedList
+		of PoolThreads is officially transient
